# cpu_optimized_app

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
core_lib/: Cargo.toml
core_lib/benches/: performance_benchmarks.rs
core_lib/src/: error.rs  lib.rs  runtime.rs
docs/: architecture.md  build_install.md  technical_specification.md  user_guide.md
examples/: basic_usage.rs  custom_library_selection.rs
scripts/: benchmark.sh  build.sh
src/: cpu_detection.rs  error.rs  lib_loader.rs  main.rs
tests/: cross_platform_tests.rs  integration_tests.rs
