[package]
name = "cpu_optimized_app"
version = "0.1.0"
edition = "2021"
authors = ["Aleksey Zemlyansky <azemlya@gmail.com>"]
description = "Приложение, определяющее архитектуру процессора и загружающее оптимизированную библиотеку"
readme = "README.md"
license = "MIT"
repository = "https://github.com/azemlya/cpu_optimized_app"

[dependencies]
# Основные зависимости
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }

# Зависимости для работы с динамическими библиотеками
libloading = "0.8"

# Зависимости для определения архитектуры процессора
raw-cpuid = "11.5"
libc = "0.2"

# Утилиты
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.6"
tempfile = "3.20"

[workspace]
members = [
    "core_lib",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
